--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,9 @@ jobs:
         working-directory: ./frontend
 
     steps:
+      - name: checkout source code
+        uses: actions/checkout@v2
+
       - name: SSH-deploy
         uses: appleboy/ssh-action@master
         with:
