--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,5 +27,5 @@ jobs:
           port: ${{ secrets.REMOTE_PORT }}
           password: ${{ secrets.REMOTE_PASSWORD }}
           script: |
-            cd /home/ubuntu/fe-deploy-test
+            cd /home/ubuntu
             git pull origin fe-deploy-test
